--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ button:focus-visible {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  align-items: start;
+  align-items: center;
   background-color: rgb(82, 80, 80);
   padding: 20px;
 }
